# yoto-up

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  COVERS_FEATURES.md  COVERS_TAB_FEATURES.md  README.md  gui.py  icons.py  index.html  models.py  pixel_art_editor.py  pyproject.toml  requirements.txt  sitemap.xml  test.py  tui.css  tui.py  yoto-up.code-workspace  yoto.py  yoto_api.py
.github/workflows/: build-cross-flet.yml  build-cross.yml  build.yml  release.yml
.stamps/: dinosaur.json  house.json
archive/: WINDOWS_GUI_BINARY_PLAN.md
archive/docs/: mkdocs.yml
archive/docs/docs/: external services.md  overview.md  security.md
archive/src/yoto_up/: models.py  paths.py
archive/src/yoto_up/stamps/: heart.json
archive/src/yoto_up/yoto_app/: __init__.py  add_cover_dialog.py  card_details.py  config.py  icon_browser.py  icon_replace_dialog.py  import_dialog.py  intro_outro.py  pixel_fonts.py  replace_icons.py  requirements.txt  stamp_dialog.py  utils.py
core/: README.md  pyproject.toml
core/tests/: test_api.py  test_audio.py  test_models.py  test_storage.py
core/yoto_up/: __init__.py
core/yoto_up/api/: __init__.py  auth.py  cards.py  client.py  devices.py  icons.py  media.py
core/yoto_up/audio/: __init__.py  normalize.py  trim.py  waveform.py
core/yoto_up/models/: __init__.py  card.py  device.py  user.py
core/yoto_up/storage/: cache.py  paths.py  tokens.py  versions.py
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/features/: audio _trimming.md  cover_management.md  icon_management.md  index.md  uploading.md  volume_adjustement.md
docs/docs/usage/: cli-arguments.md  installation.md  usage.md
external services/: index.html
features/: index.html
features/cover_management/: index.html
features/icon_management/: index.html
features/uploading/: index.html
gui/: README.md  pyproject.toml
gui/yoto_up_gui/: __init__.py  app.py  main.py
gui/yoto_up_gui/pages/: account.py  audio_tools.py  card_detail.py  card_editor.py  card_library.py  dashboard.py  devices.py
gui/yoto_up_gui/resources/: style.qss
gui/yoto_up_gui/widgets/: __init__.py  card_tile.py  icon_picker.py  image_loader.py  nav_drawer.py
overview/: index.html
packaging/: README.md  pyinstaller.spec
packaging/linux/flatpak/: com.yotoup.YotoUp.yml
packaging/macos/dmg/: create_dmg.sh
packaging/windows/nsis/: installer.nsi
scripts/: sprite_sheet_to_stamps.py
search/: search_index.json
security/: index.html
src/: audio_adjust_utils.py  tui.css  waveform_utils.py  yoto_api.py
src/yoto_app/: auth.py  card_details.py  replace_icons.py  upload_tasks.py
src/yoto_up/: __init__.py  audio_splitter.py  gui.py  logging_setup.py  models.py  normalization.py  paths.py  tui.css  tui.py  yoto.py  yoto_api.py
src/yoto_up/stamps/: cloud.json  tree.json
src/yoto_up/yoto_app/: about_dialog.py  add_cover_dialog.py  analysis.py  api_manager.py  auth.py  card_details.py  colour_picker.py  cover_templates.py  covers.py  edit_card_dialog.py  file_picker_helpers.py  icon_browser.py  icon_import_helpers.py  icon_replace_dialog.py  import_dialog.py  intro_outro.py  library.py  pixel_art_editor.py  playlists.py  replace_icons.py  show_waveforms.py  stamp_dialog.py  startup.py  ui_helpers.py  ui_state.py  upload_tasks.py
tests/: test_audio_splitter.py  test_icons_api.py  test_progress_cb.py  test_replace_icons_component.py  test_upload_concurrency.py  test_upload_tasks_remove.py  test_yoto_api.py
tools/: flet_gridview_stress.py
typings/flet/: __init__.pyi
usage/installation/: index.html
usage/usage/: index.html
yoto_app/: add_cover_dialog.py  api_manager.py  auth.py  card_details.py  colour_picker.py  edit_card_dialog.py  icon_browser.py  icon_import_helpers.py  icon_replace_dialog.py  import_dialog.py  intro_outro.py  logging_helpers.py  pixel_art_editor.py  playlists.py  replace_icons.py  requirements.txt  show_waveforms.py  stamp_dialog.py  ui_helpers.py  upload_tasks.py
